<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/colorWhite"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/logo" />

    <com.ebveneto.custom_views.CustomLogoTextView
        style="@style/MediumBlackText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ente_bilaterale"
        android:textStyle="bold" />

    <com.ebveneto.custom_views.CustomTextViewLight
        style="@style/LargeBlackText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:text="@string/hai_dimenticato_la_password"
        android:id="@+id/customTextViewRegular" />

    <EditText
        android:id="@+id/etEmail"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:background="@drawable/grey_color_background_shapes"
        android:inputType="textEmailAddress"
        android:hint="@string/email" />

    <Button
        android:id="@+id/bnSubmit"
        style="@style/CustomButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/blue_button_rounded_corners"
        android:textAllCaps="false"
        android:text="@string/reset_password" />
</LinearLayout>
