<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical"
    tools:context="com.ebveneto.activities.ChangePasswordActivity">

    <ImageView
        android:id="@+id/ivEbvLogo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="20dp"
        android:contentDescription="@null"
        android:src="@drawable/applogonew"/>

    <EditText
        android:id="@+id/etExistingPassword"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:background="@drawable/grey_color_background_shapes"
        android:inputType="textPassword"
        android:hint="@string/password_esistente" />

    <EditText
        android:id="@+id/etNewPassword"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:background="@drawable/grey_color_background_shapes"
        android:inputType="textPassword"
        android:hint="@string/nuova_password" />

    <EditText
        android:id="@+id/etConfirmPassword"
        style="@style/CustomEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textCursorDrawable="@drawable/cursor_drawable"
        android:background="@drawable/grey_color_background_shapes"
        android:inputType="textPassword"
        android:hint="@string/conferma_password" />

    <LinearLayout
        android:id="@+id/llChangePassword"
        style="@style/CustomProfileButton"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:background="@drawable/blue_button_rounded_corners">

        <com.ebveneto.custom_views.CustomTextViewBold
            style="@style/LargeBlackText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/password"
            android:gravity="center"
            android:text="@string/cambia_la_password"
            android:textAllCaps="true" />
    </LinearLayout>

</LinearLayout>
