<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tvTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/privacy_policy"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#ff0000"
        android:textStyle="bold"
        android:visibility="gone" />

    <WebView
        android:id="@+id/wvPrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:gravity="center"
        android:padding="16dp" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="0.1dp"
        android:background="@android:color/black" />

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:weightSum="2">

        <Button
            android:id="@+id/btnClose"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/close"
            android:textColor="#ff0000"
            android:textSize="14dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnDisAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/disagree"
            android:textColor="#ff0000"
            android:textSize="14dp"
            android:textStyle="bold"
            android:visibility="gone" />

        <View
            android:layout_width="0.1dp"
            android:layout_height="match_parent"
            android:background="@android:color/black"
            android:visibility="gone" />

        <Button
            android:id="@+id/btnIAgree"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_weight="1"
            android:background="@android:color/white"
            android:text="@string/i_agree"
            android:textColor="#ff0000"
            android:textSize="14dp"
            android:textStyle="bold"
            android:visibility="gone" />
    </LinearLayout>


</LinearLayout>
